<resources>
    <string name="account">Account</string>
    <string name="account_type_asset">Asset account</string>
    <string name="account_type_asset_plural">Asset accounts</string>
    <string name="account_type_bank">Bank account</string>
    <string name="account_type_bank_plural">Bank accounts</string>
    <string name="account_type_cash">Cash account</string>
    <string name="account_type_cash_plural">Cash accounts</string>
    <string name="account_type_ccard">Credit card</string>
    <string name="account_type_ccard_plural">Credit cards</string>
    <string name="account_type_liability">Liabilities account</string>
    <string name="account_type_liability_plural">Liabilities accounts</string>
    <string name="already_defined">%1$s already defined</string>
    <string name="amount">Amount</string>
    <string name="app_name">My Expenses</string>
    <string name="backup_failure">Backup to \"%1$s\" failed.</string>
    <string name="backup_success">Database and preferences successfully written to \"%1$s\".</string>
    <string name="category">Category</string>
    <string name="clone_transaction_error">Could not clone transaction.</string>
    <plurals name="clone_transaction_success">
	    <item quantity="one">Transaction successfully cloned.</item>
	    <item quantity="other">%1$d transactions were successfully cloned.</item>
    </plurals>
    <string name="split_transaction_error">Could not transform transaction to split.</string>
    <plurals name="split_transaction_success">
      <item quantity="one">Transaction successfully transformed to split.</item>
      <item quantity="other">%1$d transactions were successfully transformed to splits.</item>
    </plurals>
    <string name="color">Color</string>
    <string name="comment">Notes</string>
    <string name="confirmation_dialog_dont_show_again">Do not show again</string>
    <string name="contrib_feature_accounts_unlimited_description">The number of accounts you can create with <i>My Expenses</i> is limited to 5.</string>
    <string name="contrib_feature_accounts_unlimited_label">Unlimited number of accounts</string>
    <string name="contrib_feature_attach_picture_label">Attach image to transaction</string>
    <string name="contrib_feature_distribution_label">Distribution of transactions per category</string>
    <string name="contrib_feature_plans_unlimited_description">The number of plans you can create with <i>My Expenses</i> is limited to 3.</string>
    <string name="contrib_feature_plans_unlimited_label">Unlimited number of plans</string>
    <string name="contrib_feature_print_label">Export transaction list to PDF</string>
    <string name="contrib_feature_security_question_label">Security question</string>
    <string name="contrib_feature_split_transaction_label">Split transaction</string>
    <string name="contrib_feature_template_widget_label">Template widget</string>
    <string name="contrib_key">Contrib key</string>
    <string name="contrib_key_requires">Requires My Expenses Contrib Key.</string>
    <string name="currency">Currency</string>
    <string name="current_balance">Current balance</string>
    <string name="date">Date</string>
    <string name="date_format">Date format</string>
    <string name="date_format_illegal">Illegal date format</string>
    <string name="decimal_separator">Decimal separator</string>
    <string name="default_account_description">This account was set up automatically during installation</string>
    <string name="default_account_name">Budget Book</string>
    <string name="description">Description</string>
    <string name="dialog_balance_delete">Delete reconciled transactions</string>
    <string name="dialog_command_disabled_balance">No cleared transactions to be reconciled.</string>
    <string name="dialog_command_disabled_insert_transfer_1">Transfer transactions require a second account with the same currency.</string>
    <string name="dialog_command_disabled_insert_transfer_2">You have only one account of currency %1$s.</string>
    <string name="dialog_command_disabled_reset_account">No transactions to export.</string>
    <string name="dialog_command_disabled_distribution">No transactions have been mapped to categories in this account.</string>
    <string name="dialog_contrib_no">Not yet</string>
    <string name="dialog_contrib_no_usages_left">No free usages left.</string>
    <string name="dialog_contrib_premium_feature">%1$s is a premium feature.</string>
    <string name="dialog_contrib_reminder_remove_limitation">Remove this limitation by purchasing <i>My Expenses Contrib Key</i>.</string>
    <string name="dialog_contrib_reminder_gain_access">You also gain unrestricted acces to the following features:</string>
    <string name="dialog_contrib_text"><i>My Expenses</i> is offered ad free and open source. Please contribute by purchasing <i>My Expenses Contrib Key</i>. You gain unrestricted access to the following premium features:</string>
    <plurals name="dialog_contrib_usage_count">
    <item quantity="one">You have one free usage left.</item>
    <item quantity="other">You have %1$d free usages left.</item>
  </plurals>
    <string name="dialog_contrib_yes">Buy now</string>
    <string name="dialog_export_delete">Delete exported transactions</string>
    <string name="dialog_export_not_yet_exported">Export only transactions not yet exported</string>
    <string name="dialog_password_activate_protection">Activate password protection</string>
    <string name="dialog_password_change_password">Change password</string>
    <string name="dialog_password_new_password">New password</string>
    <string name="dialog_password_new_password_confirmation">New password (confirmation)</string>
    <string name="dialog_remind_later">Later</string>
    <string name="dialog_remind_no">No thanks</string>
    <string name="dialog_remind_rate_how_many_stars">How many stars would you give to My Expenses?</string>
    <string name="dialog_remind_rate_1">Please take a moment to rate and review My Expenses.</string>
    <string name="dialog_remind_rate_2">Your comments allow us to continually add improvements and enhancements.</string>
    <string name="dialog_remind_rate_1_suggest_improvement">Please take a moment to send us your suggestions for improvements.</string>
    <string name="dialog_remind_rate_yes">Rate now</string>
    <string name="dialog_security_answer">Answer</string>
    <string name="dialog_security_question">Question</string>
    <string name="dialog_setup_planner_button_create_new">Create new</string>
    <string name="dialog_setup_planner_button_select_existing">Select existing</string>
    <string name="dialog_title_attention">Attention</string>
    <string name="dialog_title_information">Information</string>
    <string name="dialog_title_balance_account">Balance %1$s</string>
    <string name="dialog_title_contrib_feature">Premium feature</string>
    <string name="dialog_title_planner_setup_info">Calendar setup required</string>
    <string name="dialog_title_select_account">Pick an account</string>
    <string name="dialog_title_select_grouping">Pick a grouping</string>
    <string name="dialog_title_select_import_source">Pick a source for import</string>
    <string name="dialog_title_select_template">Pick a template</string>
    <string name="dialog_title_set_fraction_digits">Set the number of fraction digits</string>
    <string name="dialog_title_template_title">Set the title</string>
    <string name="dialog_title_warning_delete_account">Delete account?</string>
    <string name="dialog_title_warning_delete_main_category">Delete main category?</string>
    <string name="dialog_title_warning_delete_plan">Delete plan?</string>
    <string name="dialog_title_warning_delete_template">Delete template?</string>
    <string name="dialog_title_warning_delete_transaction">Delete transaction?</string>
    <string name="dialog_title_welcome">Welcome!</string>
    <string name="donate">Donate</string>
    <string name="donate_dialog_text">Please donate via PayPal, Flattr or Bitcoin, and then request a contrib key from the settings screen.</string>
    <string name="expense">Expense</string>
    <string name="export_expenses">Expenses export</string>
    <string name="export_expenses_sdcard_failure">Expenses export to \"%1$s\" failed: %2$s</string>
    <string name="export_expenses_sdcard_success">Expenses exported to file \"%1$s\"</string>
    <string name="external_storage_unavailable">External storage (sdcard) not available</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_email_message">Send your feedback, in English, French or German, please!</string>
    <string name="ftp_uri_malformed">Malformed URI %1$s</string>
    <string name="grisbi_import_categories_loading">Loading categories from %1$s</string>
    <string name="grisbi_import_default_source">English default categories</string>
    <string name="grisbi_import_parsing">Parsing %1$s</string>
    <string name="grisbi_import_parties_loading">Loading parties from %1$s</string>
    <string name="grouping_day">Day</string>
    <string name="grouping_last_week">Last week</string>
    <string name="import_select_transactions">Transactions</string>
    <string name="label">Label</string>
    <string name="menu_back">Back</string>
    <string name="menu_create_split">New split</string>
    <string name="menu_create_transaction">New Transaction</string>
    <string name="menu_create_transfer">New Transfer</string>
    <string name="menu_edit_account">Edit Account</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_grouping">Grouping</string>
    <string name="menu_reset">Export and reset</string>
    <string name="menu_settings">Settings</string>
    <string name="method">Method</string>
    <string name="no_split_parts">No split parts.</string>
    <string name="opening_balance">Opening balance</string>
    <string name="payee">Payee</string>
    <string name="plan">Plan</string>
    <string name="pref_backup_summary">Create a backup of database and preferences.</string>
    <string name="pref_categories_sort_by_usages_summary">Should categories, templates and accounts be sorted by how often they are used instead of alphabetic sort. This setting is ignored for accounts if they have a sort key set.</string>
    <string name="pref_categories_sort_by_usages_title">Sort by count of usages</string>
    <string name="pref_category_title_import">Import</string>
    <string name="pref_import_from_grisbi_summary">Import categories and parties from Grisbi XML file</string>
    <string name="pref_import_from_grisbi_title">Import from Grisbi</string>
    <string name="pref_manage_accounts_title">Accounts</string>
    <string name="pref_manage_categories_title">Categories</string>
    <string name="pref_manage_parties_title">Parties</string>
    <string name="pref_share_target_summary">Leave empty if you want to choose between appropriate apps (Email, Dropbox, Google Docs, …), or provide URL in one of the supported schemes</string>
    <string name="pref_share_target_title">Upload URL</string>
    <string name="reference_number">Reference Number</string>
    <string name="split_parts_heading">Split parts</string>
    <string name="status">Status</string>
    <string name="sum_expenses">Expenses</string>
    <string name="sum_income">Income</string>
    <string name="sum_transfer">Transfers</string>
    <string name="title">Title</string>
    <string name="restore_calendar_handling">Calendar data handling</string>
    <string name="restore_calendar_handling_configured">Restore plans to currently configured calendar</string>
    <string name="restore_calendar_handling_backup">Restore plans to calendar set in backup if available</string>
    <string name="restore_calendar_handling_ignore">Do not restore plans</string>
    <string name="menu_distribution_aggreate">Aggregate expenses and income</string>
</resources>