<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of My Expenses.
  My Expenses is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  My Expenses is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with My Expenses.  If not, see <http://www.gnu.org/licenses/>.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  <item
    android:id="@id/INSERT_TA_COMMAND"
    android:icon="@drawable/create_transaction_icon"
    android:showAsAction="always"
    android:title="@string/menu_create_transaction">
  </item>
  <item
    android:id="@id/INSERT_TRANSFER_COMMAND"
    android:icon="@drawable/create_transfer_icon"
    android:showAsAction="ifRoom"
    android:title="@string/menu_create_transfer">
  </item>
  <item
    android:id="@id/INSERT_SPLIT_COMMAND"
    android:icon="@drawable/create_split_icon"
    android:showAsAction="ifRoom"
    android:title="@string/menu_create_split">
  </item>
  <item
    android:id="@id/NEW_FROM_TEMPLATE_COMMAND"
    android:icon="@drawable/new_from_template_icon"
    android:showAsAction="ifRoom"
    android:title="@string/menu_new_from_template">
  </item>
  <item
    android:id="@id/RESET_ACCOUNT_COMMAND"
    android:icon="@drawable/reset_icon"
    android:showAsAction="ifRoom"
    android:title="@string/menu_reset">
  </item>
  <item
    android:id="@id/EDIT_ACCOUNT_COMMAND"
    android:icon="@drawable/edit_account_icon"
    android:showAsAction="ifRoom"
    android:title="@string/menu_edit_account">
  </item>
  <item
    android:id="@id/GROUPING_COMMAND"
    android:icon="@drawable/grouping_icon"
    android:showAsAction="ifRoom"
    android:title="@string/menu_grouping">
  </item>
  <item
    android:id="@id/SETTINGS_COMMAND"
    android:icon="@android:drawable/ic_menu_preferences"
    android:title="@string/menu_settings">
  </item>
</menu>
