<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    tools:showIn="@layout/backup_restore_dialog">

    <TextView
        style="@style/form_label.dialog"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:text="@string/restore_calendar_handling"/>

    <RadioGroup
        android:id="@+id/restore_calendar_handling"
        android:layout_width="0dip"
        android:layout_weight="3"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/restore_calendar_handling_backup"
            android:text="@string/restore_calendar_handling_backup"/>

        <RadioButton
            android:id="@+id/restore_calendar_handling_configured"
            android:text="@string/restore_calendar_handling_configured"/>

        <RadioButton
            android:id="@+id/restore_calendar_handling_ignore"
            android:text="@string/restore_calendar_handling_ignore"/>
    </RadioGroup>
</TableRow>