<?xml version="1.0" encoding="utf-8"?>

<TableLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_height="fill_parent"
android:layout_width="fill_parent"
android:id="@+id/Table">

<TableRow>
<TextView
android:textColor="#ffffff" android:text="@string/label"/>
<EditText android:id="@+id/Label" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
</TableRow>

<TableRow>
<TextView android:textColor="#ffffff" android:text="@string/description" />
<EditText android:id="@+id/Description" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
</TableRow>

<TableRow>
<TextView
android:textColor="#ffffff" android:text="@string/opening_balance"/>
<EditText android:inputType="phone" android:id="@+id/Opening_balance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:numeric="decimal"></EditText>
</TableRow>

<TableRow>
<TextView android:textColor="#ffffff" android:text="@string/currency" />
<EditText android:id="@+id/Currency" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
</TableRow>

<TableRow>
<Button android:id="@+id/Confirm" android:text="@string/done"/>
</TableRow>
</TableLayout>