<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/MANAGE_CATEGORIES_COMMAND"
        android:title="@string/menu_manage_categories"
        app:showAsAction="never"/>
    <item
        android:id="@+id/BACK_COMMAND"
        android:icon="@drawable/ic_menu_back"
        android:title="@string/menu_back"
        app:showAsAction="never"/>
    <item
        android:id="@+id/FORWARD_COMMAND"
        android:icon="@drawable/ic_menu_forward"
        android:title="@string/menu_forward"
        app:showAsAction="never"/>
    <item
        android:id="@id/TOGGLE_AGGREGATE_TYPES"
        android:checkable="true"
        android:title="@string/menu_distribution_aggreate"
        app:showAsAction="never"/>
</menu>