<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of My Expenses. My Expenses is free software: you 
	can redistribute it and/or modify it under the terms of the GNU General Public 
	License as published by the Free Software Foundation, either version 3 of 
	the License, or (at your option) any later version. My Expenses is distributed 
	in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even 
	the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
	See the GNU General Public License for more details. You should have received 
	a copy of the GNU General Public License along with My Expenses. If not, 
	see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/general_padding"
        android:paddingRight="@dimen/general_padding"
        android:shrinkColumns="1"
        android:stretchColumns="1" >

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/filename" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                style="@style/dialog_text"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:text="@string/restore_calendar_handling" />

            <RadioGroup
                android:id="@+id/restore_calendar_handling"
                android:layout_width="0dip"
                android:layout_weight="3"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/restore_calendar_handling_backup"
                    android:text="@string/restore_calendar_handling_backup" />

                <RadioButton
                    android:id="@+id/restore_calendar_handling_configured"
                    android:text="@string/restore_calendar_handling_configured" />

                <RadioButton
                    android:id="@+id/restore_calendar_handling_ignore"
                    android:text="@string/restore_calendar_handling_ignore" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

</ScrollView>