<?xml version="1.0" encoding="utf-8"?>
<!-- 
  This file is part of My Expenses.
  My Expenses is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  My Expenses is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with My Expenses.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">
  <View android:id="@+id/color1"
      android:layout_height="fill_parent"
      android:layout_width="4dp"/>
  <TableLayout
      android:layout_height="wrap_content"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:stretchColumns="0"
      android:shrinkColumns="1">
  <TableRow>
    <TextView android:text="LABEL" android:id="@+id/label"
    style="@style/headingStyle"
    android:layout_span="2"/>
  </TableRow>
  <TableRow style="@style/paddedListRow">
    <TextView android:text="DESCRIPTION" android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_span="2" />
  </TableRow>
  <TableRow>
    <TextView style="@style/form_label"
        android:layout_marginLeft="@dimen/general_padding"
        android:text="@string/opening_balance"/>
    <TextView android:text="OPENING_BALANCE" android:id="@+id/opening_balance"
        android:layout_marginRight="@dimen/general_padding"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
  </TableRow>
  <TableRow>
    <TextView style="@style/form_label"
        android:layout_marginLeft="@dimen/general_padding"
        android:text="@string/sum_income"/>
    <TextView android:text="SUM_INCOME" android:id="@+id/sum_income"
        android:layout_marginRight="@dimen/general_padding"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
  </TableRow>
  <TableRow>
    <TextView style="@style/form_label"
        android:layout_marginLeft="@dimen/general_padding"
        android:text="@string/sum_expenses"/>
  <TextView android:text="SUM_EXPENSES" android:id="@+id/sum_expenses"
        android:layout_marginRight="@dimen/general_padding"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
  </TableRow>
  <TableRow>
    <TextView style="@style/form_label"
        android:layout_marginLeft="@dimen/general_padding"
        android:text="@string/sum_transfer"/>
  <TextView android:text="SUM_TRANSFER" android:id="@+id/sum_transfer"
        android:layout_marginRight="@dimen/general_padding"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
  </TableRow>
  <TableRow>
    <View/><View
      android:background="?android:attr/colorForeground"
      android:layout_marginRight="@dimen/general_padding"
      android:layout_width="fill_parent"
      android:layout_height="4dp"/>
  </TableRow>
  <TableRow>
    <TextView style="@style/form_label"
        android:layout_marginLeft="@dimen/general_padding"
        android:text="@string/current_balance"/>
    <TextView android:text="CURRENT_BALANCE" android:id="@+id/current_balance"
        android:layout_marginRight="@dimen/general_padding"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
  </TableRow>
</TableLayout>
</LinearLayout>